WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51415
Fix crash when a Carbon plug-in fails to initialize correctly
https://bugs.webkit.org/show_bug.cgi?id=51415
Summary
Fix crash when a Carbon plug-in fails to initialize correctly
Anders Carlsson
Reported
2010-12-21 13:11:13 PST
Fix crash when a Carbon plug-in fails to initialize correctly
Attachments
Patch
(2.40 KB, patch)
2010-12-21 13:13 PST
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2010-12-21 13:13:12 PST
Created
attachment 77145
[details]
Patch
WebKit Review Bot
Comment 2
2010-12-21 14:11:43 PST
http://trac.webkit.org/changeset/74423
might have broken SnowLeopard Intel Release (Build)
Anders Carlsson
Comment 3
2011-01-11 10:34:15 PST
Committed
r74423
: <
http://trac.webkit.org/changeset/74423
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug