Fix crash when a Carbon plug-in fails to initialize correctly https://bugs.webkit.org/show_bug.cgi?id=51415

Reviewed by Dan Bernstein.

* WebProcess/Plugins/Netscape/NetscapeBrowserFuncs.cpp:
(WebKit::NPN_GetValue):
Don't claim to support the QuickDraw event model.

* WebProcess/Plugins/Netscape/mac/NetscapePluginMac.mm:
(WebKit::NetscapePlugin::platformDestroy):
Only try to remove the window from the map if it's not null.



Canonical link: https://commits.webkit.org/64765@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74423 268f45cc-cd09-0410-ab3c-d52691b4dbfc